--- a/config
+++ b/config
@@ -190,7 +190,7 @@ bindsym $mod+r mode "resize"
 bar {
 	position top
 	i3bar_command i3bar --transparency
-        status_command i3status -c /home/$USER/.config/i3status/i3status.conf
+        status_command i3status -c /home/$USER/.config/i3/i3status.conf
 	tray_output none
 	#font pango: Mono 11
 	colors {
@@ -224,4 +224,8 @@ set $bar-color	#523d640D
 client.focused          $bgcolor        $bgcolor        $text           $indicator
 client.unfocused        $in-bgcolor     $in-bgcolor     $in-text        $in-bgcolor
 client.focused_inactive $in-bgcolor     $in-bgcolor     $in-text        $in-bgcolor
-client.urgent           $u-bgcolor      $u-bgcolor      $text           $u-bgcolor 
+client.urgent           $u-bgcolor      $u-bgcolor      $text           $u-bgcolori 
+
+
+# Outer gaps for all windows: space along the screen edges.
+gaps inner 4
